--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
         password: 'パスワード'
         password_confirmation: 'パスワード（確認）'
         salary: '時給'
+        role: '権限'
   enums:
     user:
       role:
